--- a/css/style.css
+++ b/css/style.css
@@ -177,9 +177,10 @@ Email: contact@litanmolla.com */
     padding-bottom: 47px;
     margin: 12px 0;
     padding-top: 80px;
+    transition: .5s;
 }
 
-.uxBOXSHADOW{
+.serviceItem:hover{
     box-shadow: 0px 0px 15px 15px rgba(0, 0, 0, 0.10);
 }
 
@@ -480,11 +481,16 @@ display: block;
     margin-bottom: 40px;
 }
 
+.fotterMenuItem ul li a:hover{
+    color: #151515;
+}
+
 .fotterMenuItem ul li a{
     font-size: 16px;
     font-weight: 400;
     line-height: 40px;
     color: #7B7B7B;
+    transition: .5s;
 }
 
 #footer hr{
